fix grid spacing

--- a/src/assets/scss/_extends.scss
+++ b/src/assets/scss/_extends.scss
@@ -197,6 +197,7 @@ $block-list-spacing: 15px;
 
 .block__container {
     padding-bottom: 100%;
+    overflow: hidden;
 
     .block.mod-clear & {
         padding-bottom: 66.66%;
@@ -205,10 +206,10 @@ $block-list-spacing: 15px;
 
 .block__link {
     position: absolute;
-    top: 0;
+    top: -0.5%;
     right: 0;
     bottom: 0;
-    left: 0;
+    left: -0.5%;
     display: block;
     width: 100%;
     height: 100%;
@@ -226,8 +227,8 @@ $block-list-spacing: 15px;
 }
 
 .block__bg {
-    width: 100%;
-    height: 100%;
+    width: 101%;
+    height: 101%;
     background: #f1f1f1;
     background-size: cover;
     background-position: center center;
