--- a/src/assets/scss/partials/site/_site-nav.scss
+++ b/src/assets/scss/partials/site/_site-nav.scss
@@ -4,7 +4,7 @@
     transition: all 350ms cubic-bezier(0.6,0,0.2,1);
     position: fixed;
     top: 47px;
-    right: 0;
+    right: auto;
     bottom: 0;
     left: 0;
     background: rgba($dark, 0.99);
@@ -36,4 +36,3 @@
         background: lighten($dark, 5%);
     }
 }
-
